--- a/udscs/Communication/Communication.csproj
+++ b/udscs/Communication/Communication.csproj
@@ -7,7 +7,7 @@
     <ProjectGuid>{F1F872BA-520C-4FD4-A1A2-DB0C865B2CCE}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Communication</RootNamespace>
+    <RootNamespace>Uds.Communication</RootNamespace>
     <AssemblyName>Communication</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
@@ -40,8 +40,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Communicator.cs" />
     <Compile Include="Connection.cs" />
+    <Compile Include="ConnectionPool.cs" />
+    <Compile Include="Message.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Util.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
