--- a/udscs/CommunicationTests/CommunicationTests.csproj
+++ b/udscs/CommunicationTests/CommunicationTests.csproj
@@ -53,6 +53,7 @@
   <ItemGroup>
     <Compile Include="ConnectionTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="UtilTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Communication\Communication.csproj">
