--- a/udscs/CommonTests/CommonTests.csproj
+++ b/udscs/CommonTests/CommonTests.csproj
@@ -3,11 +3,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{2CC2E6A0-8ED9-4B46-B6C3-9D711AFB29BE}</ProjectGuid>
+    <ProjectGuid>{4AA131E5-30A3-40A6-9CE6-320D062B0C48}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>CommunicationTests</RootNamespace>
-    <AssemblyName>CommunicationTests</AssemblyName>
+    <RootNamespace>CommonTests</RootNamespace>
+    <AssemblyName>CommonTests</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <ProjectTypeGuids>{3AC096D0-A1C2-E12C-1390-A8335801FDAB};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
@@ -37,7 +37,6 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
-    <Reference Include="System.XML" />
   </ItemGroup>
   <Choose>
     <When Condition="('$(VisualStudioVersion)' == '10.0' or '$(VisualStudioVersion)' == '') and '$(TargetFrameworkVersion)' == 'v3.5'">
@@ -52,14 +51,13 @@
     </Otherwise>
   </Choose>
   <ItemGroup>
-    <Compile Include="ConnectionTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="UtilTests.cs" />
+    <Compile Include="SerializeTests.cs" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\Communication\Communication.csproj">
-      <Project>{F1F872BA-520C-4FD4-A1A2-DB0C865B2CCE}</Project>
-      <Name>Communication</Name>
+    <ProjectReference Include="..\Common\Common.csproj">
+      <Project>{583DC95A-D2AC-49C0-8D74-859CC42C46A5}</Project>
+      <Name>Common</Name>
     </ProjectReference>
   </ItemGroup>
   <Choose>
